Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -198,7 +198,8 @@ game.start.couldNotStart = Impossible de démarrer la partie. Détails ci-dessou
 game.full = Partie pleine
 # I would need context for that one please
 game.full.action = Afficher la partie
-game.mods.twoAndMore = {0}, {1} et {2,number,#} autres
+# Fuzzy
+game.mods.twoAndMore = {0} et {1,number,#} autres
 game.gameStatus = Statut de jeu
 game.gameStatus.playing = En cours de partie
 game.gameStatus.lobby = En attente du démarrage d'une partie
@@ -756,6 +757,7 @@ replay.abortAfterMapNotFound = Annuler et afficher plus d'informations
 replay.mapDownloadFailed = Le téléchargement de la carte a échoué pour cette rediffusion 
 replay.mapDownloadFailed.wannaContinue = Nous n'avons pas pu trouver la carte mentionnée dans le fichier de rediffusion. Cependant, le jeu peut encore savoir où le trouver. Considérez ceci comme un avertissement, car la rediffusion pourrait être corrompue.
 map.unknown = inconnu
+# Fuzzy
 settings.account.goWebsite = Pour la plupart des activités liées au compte, veuillez visiter notre site web
 settings.account.goWebsiteButton = Visiter le site web de FAForever
 map.versionId = Version ID de la carte
@@ -923,7 +925,7 @@ game.gameStatus.hosting = En attente d'autres joueurs
 mod.idNumber = \#{0}
 # Noun or Verb?
 # Fuzzy
-label.copy = Copy
+label.copy = Copier
 settings.fa.allowReplayWhileInGame = Autoriser l'accès aux rediffusions en cours de partie
 settings.fa.patchGamePrefs = Mettre à jour game.prefs
 settings.fa.allowReplayWhileInGame.description = Si vous activez cette fonctionnalité expérimentale, vous pouvez accéder aux rediffusions en cours de partie. En plus de cocher cette case, vous devez mettre à jour votre fichier game.prefs. Le client peut réaliser cette opération pour vous en cliquant sur le bouton ci-dessous. Si ce bouton est désactivé, votre fichier game.prefs est déjà mis à jour. Soyez également informé que l'exécution simultanée de versions différentes du jeu peut causer des erreurs.
@@ -1035,3 +1037,48 @@ userInfo.tooltipFormat.withRating = {0} ({1,number,#})
 userInfo.tooltipFormat.noRating = {0}
 # Fuzzy
 map.updater.search = Recherche de mise à jour de la carte
+teammatchmaking.chat.topic = Trouver des partenaires et des conseils de jeu sur notre discord officiel \:
+getHelp = Obtenir de l'aide
+copyError = Copier l'erreur
+findHelp = Si cette erreur persiste, utilise le bouton pour obtenir de l'aide et ouvrir le forum d'aide. Assurez-vous de vérifier la FAQ et les topics précédents. Si vous créez un nouveau topic, veuillez inclure les logs accessibles depuis le menu en haut à gauche du client.
+game.crash = Supreme Commander\: Forged Alliance a crashé. Vérifiez le log {0} pour plus d''information.
+replayNotAvailable = Rediffusion {0,number,#} absente du serveur. Veuillez réessayer plus tard.
+close = Fermer
+userMenu.moderationReport = Signalements
+game.report = Signaler la partie
+report.description.placeholder = Veuillez fournir une description brève mais complète de l'incident que vous signalez. A défaut d'enregistrement de l'incident (ex \: sur \#aeolus ou dans une partie), veuillez fournir une capture d'écran. Vous pouvez utiliser n'importe quel site de partage d'image tel que http\://imgur.com/.
+report.description = Description
+report.id = ID
+report.createTime = Créé le
+report.offender = Contrevenant
+report.moderator = Modérateur
+report.notice = Notice
+report.status = Statut
+report.gameID = ID de rediffusion
+report.gameTime = Code temporel
+report.gamePrompt = (si l'incident s'est passé en cours de partie)
+report.userSearch = Contrevenant
+report.title = Signalement
+report.newReport = Nouveau signalement
+report.submit = Envoyer signalement
+report.noReports = Vous n'avez envoyé aucun signalement durant l'année passée
+report.awaiting = En attente
+report.processing = En traitement
+report.completed = Terminé
+report.discarded = Annulé
+report.previousReports = Signalement précédents
+report.warning.title = Avertissement
+report.warning.noGameTime = Ce signalement indique un incident en cours de partie. Veuillez fournir le code temporel du moment de l'incident.
+report.warning.noOffender = Les signalements doivent comprendre un contrevenant
+report.warning.noOffenderInGame = Le contrevenant ne joue pas dans la partie indiquée
+report.warning.noDescription = Les signalements doivent contenir une description
+report.warning.noPlayer = Le nom d'utilisateur ne correspond à aucun joueur connu
+report.warning.gameIdNotNumeric = L'identifiant de rediffusion doit être numérique
+report.warning.noGame = Identifiant de rediffusion inconnu
+report.error = Erreur lors de l'envoi du signalement
+management.maps.openButton.label = Gérer les cartes
+management.maps.closeButton.label = Fermer
+management.maps.allMaps = Toutes les cartes
+management.maps.customMaps = Cartes personnalisées
+management.maps.officialMaps = Cartes officielles
+management.maps.uninstall.error = Impossible de désinstaller la carte
