Update messages_de.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -791,6 +791,7 @@ replay.abortAfterMapNotFound = Abbrechen und mehr Information
 replay.mapDownloadFailed = Karten laden fehlgeschlagen für dieses Replay
 replay.mapDownloadFailed.wannaContinue = Wir konnten die passende Karte zu diesem Replay nicht finden. Dies ist lediglich eine Warnung, die kannst trotzdem versuchen das Replay zu starten.
 map.unknown = unbekannt
+# Fuzzy
 settings.account.goWebsite = Für administrativen Tätigkeiten bezüglich deines Accounts musst du unsere Webseite besuchen.
 # Fuzzy
 settings.account.goWebsiteButton = Gehe zu faforever.com
