Update messages_it.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -776,6 +776,7 @@ replay.abortAfterMapNotFound = Annulla e visualizza info aggiuntive
 replay.mapDownloadFailed = Scaricamento mappa fallito per questo replay
 replay.mapDownloadFailed.wannaContinue = Non abbiamo potuto trovare la mappa menzionata nel file di replay. Comunque la partita potrebbe sapere dove trovarla. Considera questo messaggio come un warning, questo replay potrebbe essere broken.
 map.unknown = sconosciuto
+# Fuzzy
 settings.account.goWebsite = Per la maggior parte delle attività relative all'account è necessario visitare il nostro sito web
 # Fuzzy
 settings.account.goWebsiteButton = Visita il sito web Faforever
