Update messages_ru.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -799,6 +799,7 @@ replay.abortAfterMapNotFound = Отменить и показать подроб
 replay.mapDownloadFailed = Не удалось скачать карту для этого реплея
 replay.mapDownloadFailed.wannaContinue = Мы не нашли карту для этого реплея. Однако, игра все еще может знать где  ее найти. Примите это как предупреждение о возможном повреждении реплея.
 map.unknown = неизвестна
+# Fuzzy
 settings.account.goWebsite = Для большинства действий, связанных с аккаунтом, вам необходимо посетить наш веб-сайт
 # Fuzzy
 settings.account.goWebsiteButton = Посетить веб-сайт FAF
