Update messages_uk.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_uk.properties
+++ b/src/main/resources/i18n/messages_uk.properties
@@ -778,6 +778,7 @@ replay.abortAfterMapNotFound = Відмінити та показати біль
 replay.mapDownloadFailed = Невдале завантаження мапи для цього реплею
 replay.mapDownloadFailed.wannaContinue = Ми не знайшли мапу вказану в файлі реплею. Але можливо гра все ще знає де знайти її. Вважайте це як попередження про те що можливо реплей має помилку.
 map.unknown = невідомий
+# Fuzzy
 settings.account.goWebsite = Для більшості дій пов'язаних з аккаунтом вам необхідно відвідати наш сайт
 settings.account.goWebsiteButton = Відвідати FAForever сайт
 map.versionId = Версія мапи ID
