Use hydra user service to login
implement login with oauth token

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -243,6 +243,9 @@ login.forgot = Forgot login
 login.button.login = Login
 login.button.cancel = Cancel
 login.progress.message = Logging in…
+login.remember = Remember Me
+login.failed = Error occurred during login
+login.badState = State returned by user service does not match initial state if this continues to occur please reach out to technical help on the forum or discord channel
 vault.maps = Maps
 vault.mods = Mods
 vault.onlineReplays = FAF Replays
@@ -570,28 +573,29 @@ menu.connect = Connecting
 gameChosen.invalidPath = Invalid path
 gameChosen.couldNotLocatedGame = The specified location does not contain a valid Supreme Commander\: Forged Alliance installation.
 userInfo.statistics.errorLoading = Could not load statistics
-settings.general.unitDatabase = Unit Database
-unitDatabase.rackover = Rackover
-unitDatabase.spooky = Spooky
-game.player.rating = One of the player's ratings
-mapVault.ladder = Ladder maps
-news.showLadderMaps = Show ladder maps
-ranked1v1.showMaps = Show ladder maps
-port = Port
-login.serverHost = Server host
-login.replayServerHost = Replay server host
-login.apiBaseUrl = API base URL
-games.showModdedGames = Show modded games
-chat.userContext.copyUsername = Copy username
-userInfo.idleTimeFormat = Last seen\: {0}
-map.playCount = Times played
-map.numberOfDownloads = Downloads
-map.versionFormat = v{0}
-settings.appearance = Appearance
-settings.language = Language
+settings.general.unitDatabase=Unit Database
+unitDatabase.rackover=Rackover
+unitDatabase.spooky=Spooky
+game.player.rating=One of the player's ratings
+mapVault.ladder=Ladder maps
+news.showLadderMaps=Show ladder maps
+ranked1v1.showMaps=Show ladder maps
+port=Port
+login.serverHost=Server host
+login.replayServerHost=Replay server host
+login.apiBaseUrl=API base URL
+login.oauthBaseUrl=OAuth base URL
+games.showModdedGames=Show modded games
+chat.userContext.copyUsername=Copy username
+userInfo.idleTimeFormat=Last seen\: {0}
+map.playCount=Times played
+map.numberOfDownloads=Downloads
+map.versionFormat=v{0}
+settings.appearance=Appearance
+settings.language=Language
 # Noun
-settings.notifications.toastPreview = Preview
-settings.notifications.toastPreview.title = Toast Preview
+settings.notifications.toastPreview=Preview
+settings.notifications.toastPreview.title=Toast Preview
 settings.notifications.toastPreview.text = This is how it looks like.
 settings.language.helpUs.text = Downlord's FAF Client's localization is a community effort. If you want to see the client translated into another language we'd love your help.
 settings.language.helpUs.button = Help us translate
