Rework invite ui
Fixes #2181

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -926,46 +926,49 @@ vault.savedQueries = Favorites
 vault.saveQuery = Save Query
 map.onlyRanked = Only Ranked
 map.reviewScore = Review Score
-map.widthPixels = Width (in px)
-map.heightPixels = Height (in px)
-query.moreFilters = More Filters
-query.textFilter = {0}\: {1}
-query.categoryFilter = {0}\: {1}
-query.rangeFilter = {0}\: {1} to {2}
-query.dateRangeFilter = {0}\: from {1} to {2}
-query.afterDate = After
-query.beforeDate = Before
-mod.onlyRanked = Only Ranked
-mod.reviewScore = Review Score
-search.lowValue = Minimum
-search.highValue = Maximum
-search.afterDate = Start Date
-search.beforeDate = End Date
-search.removeQuery = Remove Query
-game.globalRating = Global Rating
-game.ladderRating = Ladder Rating
-leaderboard.divisionName = In Placement
-play.teamMatchmaking = Matchmaking
-teammatchmaking.leaveParty = Leave party
-teammatchmaking.invitePlayer = Invite players
-teammatchmaking.invite = Invite
-teammatchmaking.invitedPlayers = Invited players\:
-teammatchmaking.mapPool = Maplist
-teammatchmaking.playersInQueue = In Queue\: {0,number,#}
-teammatchmaking.queuePopTimer = Matching in\: {0,number,0}\:{1,number,00}
-teammatchmaking.gameCount = Games played\: {0,number,#}
-teammatchmaking.notification.invite.title = Invited to party
-teammatchmaking.notification.invite.message = {0} has invited you to join their party
-teammatchmaking.notification.invite.join = Join
-teammatchmaking.match.found = Match found\!
-teammatchmaking.match.starting = Match launching...
-teammatchmaking.match.cancelled = Match cancelled\!
-teammatchmaking.notification.matchFound.title = Match found
-teammatchmaking.notification.matchFound.message = A match was found and will launch soon
-teammatchmaking.notification.inviteAlreadyInQueue.title = You are already in a queue
-teammatchmaking.notification.inviteAlreadyInQueue.message = Please leave all queues before inviting a player
-teammatchmaking.notification.joinAlreadyInQueue.title = You are already in a queue
-teammatchmaking.notification.joinAlreadyInQueue.message = Please leave all queues before joining a party
+map.widthPixels=Width (in px)
+map.heightPixels=Height (in px)
+query.moreFilters=More Filters
+query.textFilter={0}\: {1}
+query.categoryFilter={0}\: {1}
+query.rangeFilter={0}\: {1} to {2}
+query.dateRangeFilter={0}\: from {1} to {2}
+query.afterDate=After
+query.beforeDate=Before
+mod.onlyRanked=Only Ranked
+mod.reviewScore=Review Score
+search.lowValue=Minimum
+search.highValue=Maximum
+search.afterDate=Start Date
+search.beforeDate=End Date
+search.removeQuery=Remove Query
+game.globalRating=Global Rating
+game.ladderRating=Ladder Rating
+leaderboard.divisionName=In Placement
+play.teamMatchmaking=Matchmaking
+teammatchmaking.searchAndInvite=Search and invite players
+teammatchmaking.search.prompt=Name
+teammatchmaking.search.noOneInvited=You have not invited anybody yet
+teammatchmaking.leaveParty=Leave party
+teammatchmaking.invitePlayer=Invite players
+teammatchmaking.invite=Invite
+teammatchmaking.invitedPlayers=Invited players\:
+teammatchmaking.mapPool=Maplist
+teammatchmaking.playersInQueue=In Queue\: {0,number,#}
+teammatchmaking.queuePopTimer=Matching in\: {0,number,0}\:{1,number,00}
+teammatchmaking.gameCount=Games played\: {0,number,#}
+teammatchmaking.notification.invite.title=Invited to party
+teammatchmaking.notification.invite.message={0} has invited you to join their party
+teammatchmaking.notification.invite.join=Join
+teammatchmaking.match.found=Match found\!
+teammatchmaking.match.starting=Match launching...
+teammatchmaking.match.cancelled=Match cancelled\!
+teammatchmaking.notification.matchFound.title=Match found
+teammatchmaking.notification.matchFound.message=A match was found and will launch soon
+teammatchmaking.notification.inviteAlreadyInQueue.title=You are already in a queue
+teammatchmaking.notification.inviteAlreadyInQueue.message=Please leave all queues before inviting a player
+teammatchmaking.notification.joinAlreadyInQueue.title=You are already in a queue
+teammatchmaking.notification.joinAlreadyInQueue.message=Please leave all queues before joining a party
 teammatchmaking.notification.customAlreadyInQueue.title = You are already in a matchmaking queue
 teammatchmaking.notification.customAlreadyInQueue.message = Please leave all queues before joining a custom game
 teammatchmaking.notification.gameAlreadyRunning.title = Already in game
