--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -311,6 +311,7 @@ game.mapGeneration.notification.message=Please stand by. (Version: {0}, Seed: {1
 game.mapGeneration.failed.title=Map generation failed.
 game.mapGeneration.failed.message=The requested map could not be generated, the map generation process did not terminate within timeout. Killing process.
 game.mapGeneration.downloadGenerator.title=Downloading map generator version {0}
+game.mapGeneration.options.title=Getting map options (Version: {0})
 game.mapGeneration.generateMap.title=Generating map... (Version: {0})
 game.crash=It looks like Supreme Commander: Forged Alliance crashed check the game log {0} for more information
 featuredMod.displayName=Game mod name
