--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -186,7 +186,7 @@ chat.groupChat.playerConnect={0} has connected
 games.create=Create game
 games.create.minRating=Min.
 game.create.generationType=Type of generated map:\nCausal - Client and lobby preview generated.\nTournament - Forces all random, Client preview not generated and time stamp added to map description.\nBlind - Forces all random, Client and Lobby preview not generated and time stamp added to map description.\nUnexplored - Map terrain and resources need to be revealed by units
-game.create.spawnCount=Number of spawns
+game.create.spawnCount=Number of Spawns
 game.create.mapSize=Map Size
 games.create.maxRating=Max.
 games.showPasswordProtectedGames=Show private games
@@ -215,6 +215,7 @@ game.generateMap.generateNew=Generate a new map using the following options:
 game.generateMap.dialog=Map Generator Options
 game.generateMap.nameCaution=Enter the name of a generated map you want to regenerate. Map name must be of the form neroxis_map_generator_(version)_(seed)_(options).
 game.generateMap.generatedName=Map Name
+game.generateMap.commandLine=Command Arguments
 game.generateMap.waterSlider=Water
 game.generateMap.plateauSlider=Plateaus
 game.generateMap.mountainSlider=Mountains
@@ -222,6 +223,7 @@ game.generateMap.rampSlider=Ramps
 game.generateMap.mexSlider=Mexes
 game.generateMap.reclaimSlider=Reclaim
 game.generateMap.random=Random
+game.generateMap.style=Map Style
 game.generateMap.generationType=Generation Type
 game.generateMap.casual=Casual
 game.generateMap.tournament=Tournament
@@ -309,6 +311,7 @@ game.mapGeneration.notification.message=Please stand by. (Version: {0}, Seed: {1
 game.mapGeneration.failed.title=Map generation failed.
 game.mapGeneration.failed.message=The requested map could not be generated, the map generation process did not terminate within timeout. Killing process.
 game.mapGeneration.downloadGenerator.title=Downloading map generator version {0}
+game.mapGeneration.options.title=Getting map options (Version: {0})
 game.mapGeneration.generateMap.title=Generating map... (Version: {0})
 game.crash=It looks like Supreme Commander: Forged Alliance crashed check the game log {0} for more information
 featuredMod.displayName=Game mod name
