Update messages_cat.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cat.properties
+++ b/src/main/resources/i18n/messages_cat.properties
@@ -775,6 +775,7 @@ startTab.save = Desa
 startTab.wantToConfigure = Selecciona la pestanya d'inici\:
 startTab.configure = Configura
 vault.replays.onlyShowLastYear = Només de l'any passat
+# Fuzzy
 game.create.spawnCount = Nombre d'aparicions
 game.create.mapSize = Mida del mapa
 game.generate = Genera un nou mapa
