Update messages_nl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -803,6 +803,7 @@ startTab.save = Bewaar
 startTab.wantToConfigure = Selecteer het tabblad om 
 startTab.configure = Configureer
 vault.replays.onlyShowLastYear = Alleen van het laatste jaar
+# Fuzzy
 game.create.spawnCount = Hoeveelheid spawns
 game.create.mapSize = Map grootte
 game.generate = Maak een nieuwe map
