Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -198,7 +198,6 @@ game.start.couldNotStart = Impossible de démarrer la partie. Détails ci-dessou
 game.full = Partie pleine
 # I would need context for that one please
 game.full.action = Afficher la partie
-# Fuzzy
 game.mods.twoAndMore = {0} et {1,number,#} autres
 game.gameStatus = Statut de jeu
 game.gameStatus.playing = En cours de partie
@@ -781,6 +780,7 @@ startTab.save = Sauvegarder
 startTab.wantToConfigure = Sélectionnez l'onglet pour commencer \:
 startTab.configure = Configurer
 vault.replays.onlyShowLastYear = L'an passé uniquement
+# Fuzzy
 game.create.spawnCount = Nombre de points d'insertion
 game.create.mapSize = Taille de la carte
 game.generate = Générer une nouvelle carte
@@ -1037,10 +1037,10 @@ userInfo.tooltipFormat.withRating = {0} ({1,number,#})
 userInfo.tooltipFormat.noRating = {0}
 # Fuzzy
 map.updater.search = Recherche de mise à jour de la carte
-teammatchmaking.chat.topic = Trouver des partenaires et des conseils de jeu sur notre discord officiel \:
+teammatchmaking.chat.topic = Trouvez des partenaires et des conseils de jeu sur notre discord officiel \:
 getHelp = Obtenir de l'aide
 copyError = Copier l'erreur
-findHelp = Si cette erreur persiste, utilise le bouton pour obtenir de l'aide et ouvrir le forum d'aide. Assurez-vous de vérifier la FAQ et les topics précédents. Si vous créez un nouveau topic, veuillez inclure les logs accessibles depuis le menu en haut à gauche du client.
+findHelp = Si cette erreur persiste, utilisez le bouton pour obtenir de l'aide et ouvrir le forum d'aide. Assurez-vous de vérifier la FAQ et les topics précédents. Si vous créez un nouveau topic, veuillez inclure les logs accessibles depuis le menu en haut à gauche du client.
 game.crash = Supreme Commander\: Forged Alliance a crashé. Vérifiez le log {0} pour plus d''information.
 replayNotAvailable = Rediffusion {0,number,#} absente du serveur. Veuillez réessayer plus tard.
 close = Fermer
@@ -1082,3 +1082,6 @@ management.maps.allMaps = Toutes les cartes
 management.maps.customMaps = Cartes personnalisées
 management.maps.officialMaps = Cartes officielles
 management.maps.uninstall.error = Impossible de désinstaller la carte
+game.generateMap.commandLine = Paramètres de ligne de commande
+game.generateMap.style = Style de carte
+game.mapGeneration.options.title = Obtention des options de carte (Version \: {0}))
