Update messages_it.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -801,6 +801,7 @@ startTab.save = Salva
 startTab.wantToConfigure = Seleziona il tab da cui iniziare\:
 startTab.configure = Configura
 vault.replays.onlyShowLastYear = Solo dall'anno scorso
+# Fuzzy
 game.create.spawnCount = Numero di spawn
 game.create.mapSize = Dimensione Mappa
 game.generate = Genera nuova mappa
