--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -797,6 +797,7 @@ startTab.save = Zapisz
 startTab.wantToConfigure = Wybierz okno startowe, w którym chcesz zaczynać. 
 startTab.configure = Konfiguruj
 vault.replays.onlyShowLastYear = Jedynie z ostatniego roku
+# Fuzzy
 game.create.spawnCount = Ilość pozycji startowych
 game.create.mapSize = Rozmiar mapy
 game.generate = Utwórz nową mapę
