Update messages_ru.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -824,6 +824,7 @@ startTab.save = Сохранить
 startTab.wantToConfigure = Выбрать стартовую вкладку\:
 startTab.configure = Настроить
 vault.replays.onlyShowLastYear = Лишь прошлый год
+# Fuzzy
 game.create.spawnCount = Количество спавна
 game.create.mapSize = Размер карты
 game.generate = Создать карту
