Remove unneeded replay size check

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -228,7 +228,7 @@ game.watch = Watch
 game.watchButtonFormat = Watch ({0})
 game.watchDelayedFormat = Watchable in {0}
 game.replayFileMissing=Replay file missing
-game.replayNotAvailable=Replay file not available yet
+game.replayNotAvailable=Replay file not available at this time
 game.idFormat=\#{0,number,#}
 game.lineUp = Line-up
 featuredMod.displayName = Game mod name
