Add in detection of replay available flag (#2195)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -227,8 +227,9 @@ game.downloadMoreInfo = Download more information ({0})
 game.watch = Watch
 game.watchButtonFormat = Watch ({0})
 game.watchDelayedFormat = Watchable in {0}
-game.replayFileMissing = Replay file missing
-game.idFormat = \#{0,number,#}
+game.replayFileMissing=Replay file missing
+game.replayNotAvailable=Replay file not available at this time
+game.idFormat=\#{0,number,#}
 game.lineUp = Line-up
 featuredMod.displayName = Game mod name
 featuredMod.technicalName = Game mod short name
