Update messages.properties (POEditor.com)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -227,9 +227,8 @@ game.downloadMoreInfo = Download more information ({0})
 game.watch = Watch
 game.watchButtonFormat = Watch ({0})
 game.watchDelayedFormat = Watchable in {0}
-game.replayFileMissing=Replay file missing
-game.replayNotAvailable=Replay file not available at this time
-game.idFormat=\#{0,number,#}
+game.replayFileMissing = Replay file missing
+game.idFormat = \#{0,number,#}
 game.lineUp = Line-up
 featuredMod.displayName = Game mod name
 featuredMod.technicalName = Game mod short name
@@ -1048,3 +1047,4 @@ management.maps.uninstall.error = cannot uninstall the map
 game.generateMap.commandLine = Command Arguments
 game.generateMap.style = Map Style
 game.mapGeneration.options.title = Getting map options (Version\: {0})
+game.replayNotAvailable = Replay file not available at this time
