Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -753,7 +753,7 @@ mod.uploader.login = Uploader
 mapVault.upload.openValidation = Valider les métadonnées
 replay.ignoreMapNotFound = Ignorer et démarrer la rediffusion
 replay.abortAfterMapNotFound = Annuler et afficher plus d'informations
-replay.mapDownloadFailed = Le téléchargement de la carte a échoué pour cette rediffusion 
+replay.mapDownloadFailed = Le téléchargement de la carte a échoué pour cette rediffusion
 replay.mapDownloadFailed.wannaContinue = Nous n'avons pas pu trouver la carte mentionnée dans le fichier de rediffusion. Cependant, le jeu peut encore savoir où le trouver. Considérez ceci comme un avertissement, car la rediffusion pourrait être corrompue.
 map.unknown = inconnu
 # Fuzzy
@@ -1085,3 +1085,4 @@ management.maps.uninstall.error = Impossible de désinstaller la carte
 game.generateMap.commandLine = Paramètres de ligne de commande
 game.generateMap.style = Style de carte
 game.mapGeneration.options.title = Obtention des options de carte (Version \: {0}))
+game.replayNotAvailable = Fichier de rediffusion actuellement indisponible
