Adjusted german translation
The original tranlation has not made sense.

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -927,7 +927,7 @@ settings.data.gameDataCache.time.description = Definiert wie lange Spieldatendat
 settings.data.gameDataCache = Spieldatencache
 settings.data.gameDataCache.description = Speichere unbenutze Versionen. Hilft signifikant dabei die Menge an heruntergeladenen Dateien zu reduzieren wenn man alte Replays anschaut.
 settings.data.clearCache = Cache leeren
-settings.data.clearCache.description = Not nicht implementiert. Hilf und diesen Knopf einzubauen.
+settings.data.clearCache.description = Funktion noch nicht implementiert. Hilf uns diesen Knopf einzubauen.
 settings.data.clearCache.button = Caches leeren
 settings.general.cacheLifeTime = Dateien puffern für (in Tagen)\:
 chat.filter.countryPrompt = Ländercode
