--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1048,6 +1048,6 @@ game.generateMap.commandLine = Command Arguments
 game.generateMap.style = Map Style
 game.mapGeneration.options.title = Getting map options (Version\: {0})
 game.replayNotAvailable = Replay file not available at this time
-game.moreFilters = more filters...
-game.numberOfPlayers = Number of players:
-game.mapSizeInKm = Map size, in km:
+game.filter.numberOfPlayers = Number of players
+game.filter.mapHeight = Map height, in km
+game.filter.mapWidth = Map width, in km
