Add number of teams arguments

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -756,8 +756,9 @@ startTab.save = Save
 startTab.wantToConfigure = Select the tab to start at\:
 startTab.configure = Configure
 vault.replays.onlyShowLastYear = Only from last year
-game.create.spawnCount = Number of Spawns
-game.create.mapSize = Map Size
+game.create.spawnCount=Number of Spawns
+game.create.numTeams=Number of Teams
+game.create.mapSize=Map Size
 game.generate = Generate new map
 game.generate.recreate = Regenerate map using the following map name\:
 game.generate.generateNew = Generate a new map using the following options\:
