#2219 - Add additional filters at "Create game" window (#2220)
Co-authored-by: Ivan <v23620@gmail.com>

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1048,3 +1048,6 @@ game.generateMap.commandLine = Command Arguments
 game.generateMap.style = Map Style
 game.mapGeneration.options.title = Getting map options (Version\: {0})
 game.replayNotAvailable = Replay file not available at this time
+game.filter.numberOfPlayers = Number of players
+game.filter.mapHeight = Map height, in km
+game.filter.mapWidth = Map width, in km
