Update commons version and remove sneakyThrows on ReplayRunning

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -633,8 +633,9 @@ query.notContains = not contains
 coop.unknownMission = Unknown mission
 game.couldNotJoin = Could not join game with id id ''{0}''.
 discord.disallowJoins = Disallow players joining via Discord
-replay.couldNotOpen = Replay with ID ''{0}'' could not be opened.
-view.showSidePane = Show details
+replay.couldNotOpen=Replay with ID ''{0}'' could not be opened.
+replay.couldNotParse=Replay could not be parsed.
+view.showSidePane=Show details
 view.hideSidePane = Hide details
 menu.revealReplayFolder = Show replay folder
 menu.revealGamePrefsFile = Show game.prefs file
