--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1053,3 +1053,4 @@ game.replayNotAvailable = Replay file not available at this time
 game.filter.numberOfPlayers = Number of players
 game.filter.mapHeight = Map height, in km
 game.filter.mapWidth = Map width, in km
+player.info.rating = Rating:
