Update Mods before hosting
Fixes #1680

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -161,8 +161,9 @@ game.create.gameType = Game type
 game.create.mods = Mods
 game.create.titleMissing = Title is missing
 game.create.featuredModMissing = Game type is missing
-game.create.failed = Game could not be created.
-game.rehost.failed = Rehosting game failed.
+game.create.failed=Game could not be created.
+game.create.errorUpdatingMods=Could not update selected mods. This might be due to file permission errors. Also not selecting the mod on game creation will make this error disappear.
+game.rehost.failed=Rehosting game failed.
 game.title = Title
 game.players = Players
 game.map = Map
@@ -864,26 +865,28 @@ game.reasonNotValid.unknown = Unknown Result
 game.reasonNotValid.teamsUnlocked = Teams Unlocked
 game.reasonNotValid.multipleTeams = Multiple Teams
 game.reasonNotValid.ai = Had AI
-game.reasonNotValid.civiliansRevealed = Civilians Revealed
-game.reasonNotValid.difficulty = Wrong Difficulty
-game.reasonNotValid.expansion = Expansion Disabled
-game.reasonNotValid.spawn = Spawn Not Fixed
-game.reasonNotValid.other = Other
-game.valid = Game Rated
-exitWarning.title = Warning
-exitWarning.message = Forged Alliance is still running, are you sure you want to exit the client?
-chat.userContext.broadcast = Broadcast message...
-corruptedModsError.notification = An unexpected error kept the client from loading the following mod\: {0}.
-settings.data = Data and caches
-settings.data.gameDataCache.time = Game data cache validity in days
-settings.data.gameDataCache.time.description = Defines how long game data files are cached. Set to big amount of time if you want to avoid downloads. Set to small amount of time to avoid high disk usage.
-settings.data.gameDataCache = Game data cache
-settings.data.gameDataCache.description = Cache game data by saving unused versions. Significantly decreases the amount of files downloaded especially when watching old replays.
-settings.data.clearCache = Clear cache
-settings.data.clearCache.description = Not yet implemented. Help us build this button.
-settings.data.clearCache.button = Clear caches
-settings.general.cacheLifeTime = Files cached for (in days)\:
-games.create.enforceRating = Enforce rating
+game.reasonNotValid.civiliansRevealed=Civilians Revealed
+game.reasonNotValid.difficulty=Wrong Difficulty
+game.reasonNotValid.expansion=Expansion Disabled
+game.reasonNotValid.spawn=Spawn Not Fixed
+game.reasonNotValid.other=Other
+game.valid=Game Rated
+exitWarning.title=Warning
+exitWarning.message=Forged Alliance is still running, are you sure you want to exit the client?
+chat.userContext.broadcast=Broadcast message...
+corruptedModsError.notification=An unexpected error kept the client from loading the following mod\: {0}.
+settings.data.mapAndModAutoUpdate=Map and mod auto update
+settings.data.mapAndModAutoUpdate.description=Automatically downloads the newest version of a map or mod on hosting the map/mod. It is highly advised to keep the option on to get bug fixes and the newest working versions.
+settings.data=Data and caches
+settings.data.gameDataCache.time=Game data cache validity in days
+settings.data.gameDataCache.time.description=Defines how long game data files are cached. Set to big amount of time if you want to avoid downloads. Set to small amount of time to avoid high disk usage.
+settings.data.gameDataCache=Game data cache
+settings.data.gameDataCache.description=Cache game data by saving unused versions. Significantly decreases the amount of files downloaded especially when watching old replays.
+settings.data.clearCache=Clear cache
+settings.data.clearCache.description=Not yet implemented. Help us build this button.
+settings.data.clearCache.button=Clear caches
+settings.general.cacheLifeTime=Files cached for (in days)\:
+games.create.enforceRating=Enforce rating
 chat.filter.countryPrompt = Country code
 game.generateMap.generationType = Generation Type
 game.generateMap.casual = Casual
