Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -270,7 +270,7 @@ vault.replays.newest = Plus récents
 vault.replays.highestRated = Meilleure note
 vault.replays.displayQuery = Afficher la requête
 vault.replays.queryPrompt = Formez une requête à l'aide du panneau ci-dessus ou écrivez-la manuellement.
-vault.replays.searchError = Une erreur est survenue durant la recherche d'une rediffusion.
+vault.replays.searchError = Une erreur est survenue durant la recherche de rediffusions.
 vault.more = Plus…
 modVault.newestMods = Plus récents
 modVault.install = Installer
@@ -447,7 +447,7 @@ settings.chat.colorMode.default = Défaut \: Couleurs personnalisées pour certa
 settings.chat.colorMode.custom = Personnalisé \: Couleurs personnalisées pour certains utilisateurs
 settings.chat.colorMode.random = Aléatoire \: Couleurs aléatoires et uniques pour tous les utilisateurs
 settings.chat.foes = Ennemis
-settings.chat.hideFoe = Cacher les messages des ennemis
+settings.chat.hideFoe = Masquer les messages des ennemis
 settings.notifications = Notifications
 settings.notifications.enableNotifications = Activer les notifications
 # Toast ?
@@ -642,9 +642,9 @@ tournament.startingAt = Début le \:
 tournament.completedAt = Fin le \:
 mapVault.owned = Cartes possédées
 map.hidden = Cachée
-map.hide = Cacher
+map.hide = Masquer
 map.unrank = Déclasser
-map.couldNotHide = Impossible de cacher la carte.
+map.couldNotHide = Impossible de masquer la carte.
 map.couldNotUnrank = Impossible de déclasser la carte.
 modVersion.ranked = Classée
 game.missionName = Mission
@@ -658,7 +658,7 @@ game.couldNotJoin = Impossible de rejoindre la partie "{0}".
 discord.disallowJoins = Interdire l'accès depuis Discord
 replay.couldNotOpen = Impossible de démarrer la rediffusion "{0}".
 view.showSidePane = Montrer les détails
-view.hideSidePane = Cacher les détails
+view.hideSidePane = Masquer les détails
 menu.revealReplayFolder = Afficher le répertoire des rediffusions
 menu.revealGamePrefsFile = Afficher le fichier game.prefs
 ranked1v1.queuePopTimer = Recherche de partie dans {0,number,0}\:{1,number,00}
@@ -819,8 +819,8 @@ replay.team = Equipe {0}
 replay.noTeam = Pas d'équipe
 search.perPage = Items par Page
 game.generateMap = Générer une nouvelle carte
-game.generateMap.recreate = Nom de la carte générée \:
-game.generateMap.generateNew = Options de la carte générée \:
+game.generateMap.recreate = Regénérer une carte avec le nom de carte suivant \:
+game.generateMap.generateNew = Générer une nouvelle carte avec les options suivantes \:
 game.generateMap.dialog = Options du générateur de carte
 game.generateMap.nameCaution = Saisissez le nom de la carte générée. Le nom de carte doit être de la forme neroxis_map_generator_(version)_(seed)_(options).
 game.generateMap.generatedName = Nom de la carte
@@ -840,7 +840,7 @@ settings.chat.maxMessages.description = Nombre de messages conservés dans l'his
 settings.chat.previewImages.description = Afficher l'adresse URL de l'image au passage de la souris
 settings.chat.timeFormat.description = Choix du format d'affichage des heures
 settings.chat.chatFormat.description = S'applique uniquement aux nouveaux messages.
-settings.chat.hideFoe.description = Cacher les messages de chat envoyés par les joueurs que vous avez désignés comme ennemis
+settings.chat.hideFoe.description = Masquer les messages de chat envoyés par les joueurs que vous avez désignés comme ennemis
 settings.chat.autoJoinChannels = Canaux à connexion automatique
 settings.chat.autoJoinChannels.description = Canaux de chat à rejoindre automatiquement en plus de ceux spécifiés par le serveur.
 settings.notifications.enableNotifications.description = Active/Désactive toutes les notifications visuelles.
@@ -1086,3 +1086,8 @@ game.generateMap.commandLine = Paramètres de ligne de commande
 game.generateMap.style = Style de carte
 game.mapGeneration.options.title = Obtention des options de carte (Version \: {0}))
 game.replayNotAvailable = Fichier de rediffusion actuellement indisponible
+game.filter.numberOfPlayers = Nombre de joueurs
+game.filter.mapHeight = Hauteur, en km
+game.filter.mapWidth = Largeur, en km
+replay.couldNotParse = Impossible d'analyser la rediffusion.
+game.create.numTeams = Nombre d'équipes
